--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ PROJECT(${project_name})
 
 add_definitions( -std=c++11 )
 
-set(CMAKE_CXX_FLAGS "-O3 ${CMAKE_CXX_FLAGS}")
+#set(CMAKE_CXX_FLAGS "-O3 ${CMAKE_CXX_FLAGS}")
 
 # find_package(OpenMP)
 # if (OPENMP_FOUND)
@@ -39,6 +39,7 @@ set(SOURCES
     src/danknet/layer.cpp
     src/danknet/solver.cpp
 
+    src/danknet/layers/data_layer.cpp
     src/danknet/layers/image_data_layer.cpp
     src/danknet/layers/convolutional_layer.cpp
     src/danknet/layers/fully_connected_layer.cpp
@@ -59,6 +60,7 @@ set(HEADERS
     include/danknet/solver.h
     include/danknet/params.h
 
+    include/danknet/layers/data_layer.h
     include/danknet/layers/image_data_layer.h
     include/danknet/layers/convolutional_layer.h
     include/danknet/layers/fully_connected_layer.h
@@ -79,3 +81,6 @@ target_link_libraries(xor Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
 add_executable(edge_detector edge_detector.cpp ${SOURCES} ${HEADERS})
 target_link_libraries(edge_detector Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
 
+#pred_data project
+add_executable(pred_data pred_data.cpp ${SOURCES} ${HEADERS})
+target_link_libraries(pred_data Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
