We can use different activation functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,10 +77,10 @@ target_link_libraries(${project_name} Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES}) 
 add_executable(xor xor.cpp ${SOURCES} ${HEADERS})
 target_link_libraries(xor Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
 
-#xor project
+#edge_detector project
 add_executable(edge_detector edge_detector.cpp ${SOURCES} ${HEADERS})
 target_link_libraries(edge_detector Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
 
-#pred_data project
-add_executable(pred_data pred_data.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(pred_data Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
+##pred_data project
+#add_executable(pred_data pred_data.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(pred_data Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
