pred_data_train

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,21 +69,21 @@ set(HEADERS
     include/danknet/layers/softmax_layer.h
 )
 
-#main project
-add_executable(${project_name} main.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(${project_name} Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES}) #${OpenCV_LIBS})
+##main project
+#add_executable(${project_name} main.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(${project_name} Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES}) #${OpenCV_LIBS})
 
-#xor project
-add_executable(xor xor.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(xor Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
+##xor project
+#add_executable(xor xor.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(xor Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
 
-#edge_detector project
-add_executable(edge_detector edge_detector.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(edge_detector Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
+##edge_detector project
+#add_executable(edge_detector edge_detector.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(edge_detector Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
 
-#edge_detector_train project
-add_executable(edge_detector_train edge_detector_train.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(edge_detector_train Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
+##edge_detector_train project
+#add_executable(edge_detector_train edge_detector_train.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(edge_detector_train Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
 
 #pred_data project
 add_executable(pred_data pred_data.cpp ${SOURCES} ${HEADERS})
