--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,14 @@ PROJECT(${project_name})
 
 add_definitions( -std=c++11 )
 
-#set(CMAKE_CXX_FLAGS "-O3 ${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS "-O3 ${CMAKE_CXX_FLAGS}")
 
-# find_package(OpenMP)
-# if (OPENMP_FOUND)
-#     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-#     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-#     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-# endif()
+ find_package(OpenMP)
+ if (OPENMP_FOUND)
+     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+ endif()
 
 
 set(CMAKE_AUTOMOC ON)
@@ -85,10 +85,18 @@ set(HEADERS
 #add_executable(edge_detector_train edge_detector_train.cpp ${SOURCES} ${HEADERS})
 #target_link_libraries(edge_detector_train Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
 
-#pred_data project
-add_executable(pred_data pred_data.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(pred_data Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
+##pred_data project
+#add_executable(pred_data pred_data.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(pred_data Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
 
-#pred_data_train project
-add_executable(pred_data_train pred_data_train.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(pred_data_train Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
+##pred_data_train project
+#add_executable(pred_data_train pred_data_train.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(pred_data_train Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
+
+#bagging project
+add_executable(bagging bagging.cpp ${SOURCES} ${HEADERS})
+target_link_libraries(bagging Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
+
+#bagging_train project
+add_executable(bagging_train bagging_train.cpp ${SOURCES} ${HEADERS})
+target_link_libraries(bagging_train Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
