Add softmax loss layer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ set(SOURCES
     src/danknet/layers/fully_connected_layer.cpp
     src/danknet/layers/pooling_layer.cpp
     src/danknet/layers/loss_layer.cpp
+    src/danknet/layers/softmax_loss_layer.cpp
     src/danknet/layers/softmax_layer.cpp
 
 )
@@ -66,6 +67,7 @@ set(HEADERS
     include/danknet/layers/fully_connected_layer.h
     include/danknet/layers/pooling_layer.h
     include/danknet/layers/loss_layer.h
+    include/danknet/layers/softmax_loss_layer.h
     include/danknet/layers/softmax_layer.h
 )
 
