--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ PROJECT(${project_name})
 
 add_definitions( -std=c++11 )
 
-set(CMAKE_CXX_FLAGS "-O3 ${CMAKE_CXX_FLAGS}")
+#set(CMAKE_CXX_FLAGS "-O3 ${CMAKE_CXX_FLAGS}")
 
  find_package(OpenMP)
  if (OPENMP_FOUND)
@@ -40,6 +40,7 @@ set(SOURCES
     src/danknet/layer.cpp
     src/danknet/solver.cpp
 
+    src/danknet/layers/kohonen_layer.cpp
     src/danknet/layers/data_layer.cpp
     src/danknet/layers/image_data_layer.cpp
     src/danknet/layers/convolutional_layer.cpp
@@ -62,6 +63,7 @@ set(HEADERS
     include/danknet/solver.h
     include/danknet/params.h
 
+    include/danknet/layers/kohonen_layer.h
     include/danknet/layers/data_layer.h
     include/danknet/layers/image_data_layer.h
     include/danknet/layers/convolutional_layer.h
@@ -88,13 +90,17 @@ set(HEADERS
 #add_executable(edge_detector_train edge_detector_train.cpp ${SOURCES} ${HEADERS})
 #target_link_libraries(edge_detector_train Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
 
-#pred_data project
-add_executable(pred_data pred_data.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(pred_data Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
+##pred_data project
+#add_executable(pred_data pred_data.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(pred_data Qt5::Core Qt5::Gui ${HDF5_CXX_LIBRARIES})
 
-#pred_data_train project
-add_executable(pred_data_train pred_data_train.cpp ${SOURCES} ${HEADERS})
-target_link_libraries(pred_data_train Qt5::Core Qt5::Gui Qt5::Charts ${HDF5_CXX_LIBRARIES})
+##pred_data_train project
+#add_executable(pred_data_train pred_data_train.cpp ${SOURCES} ${HEADERS})
+#target_link_libraries(pred_data_train Qt5::Core Qt5::Gui Qt5::Charts ${HDF5_CXX_LIBRARIES})
+
+#kohonen_maps project
+add_executable(kohonen_maps kohonen_maps.cpp ${SOURCES} ${HEADERS})
+target_link_libraries(kohonen_maps Qt5::Core Qt5::Gui Qt5::Charts ${HDF5_CXX_LIBRARIES})
 
 ##bagging project
 #add_executable(bagging bagging.cpp ${SOURCES} ${HEADERS})
